robust change to server.xml for AJP connector error and remote debugging set to false by default